# task_tracker_cli

./: README.md  main.py  pyproject.toml  task_manager.py  tasks.json
src/: main.py  task.py  task_manager.py
src/tasker_x/: main.py  task_manager.py
tests/: test_task_manager.py
